--- a/app/views/quiz_pages/index.html.erb
+++ b/app/views/quiz_pages/index.html.erb
@@ -1,4 +1,4 @@
 <h1>I think I'm Done</h1>
 <h2>with Quiz 1 !!!</h2>
-<h3>Static</h3>
-<div>Emphatic!!!</div>
+<div id="static-one">Static...</div>
+<div id="emphatic-one" class="animate-it" >yet Emphatic!!!</div>
