change to 80's bands

--- a/app/views/quiz_pages/index.html.erb
+++ b/app/views/quiz_pages/index.html.erb
@@ -1,4 +1,1 @@
-<h1>I think I'm Done</h1>
-<h2>with Quiz 1 !!!</h2>
-<div id="static-one">Static...</div>
-<div id="emphatic-one" class="animate-it" >yet Emphatic!!!</div>
+<h1>Favorite 80's Bands</h1>
