--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -8,6 +8,9 @@ body {
 	background: url('/assets/polka.jpg');
 	text-align:center;
 }
+.container-fluid{
+	height: 90px;
+}
 
 h1{
 	font-family: 'gooddogregular', sans-serif;
@@ -30,6 +33,17 @@ h2{
 	color: #084078;
 	font-size: 70px;
 	text-shadow: 2px 2px 2px #b3b3d7;
+}
+
+.header-button-div{
+	padding-top: 10px;
+	font-family: 'Amatica SC', cursive;
+	text-shadow: 2px 2px 2px #b3b3d7;
+}
+
+.big-size{
+	font-size: 60px;
+	padding-bottom: 10px;
 }
 
 #static-one{
